Support dynamically linked llvm-rs-cc
Change-Id: I4f8ef81c7a2b5a9bccb2cf6283b80fe9bbe4cc64